kubernetes/apps/danielmtz-website-prod-tls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: danielmtz-website-prod
  namespace: danielmtz-website-prod
  labels:
    app.kubernetes.io/name: danielmtz-website-prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: danielmtz-website-prod
  ports:
    - name: http
      port: 80
      targetPort: http
