kubernetes/apps/danielmtz-website-prod-tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danielmtz-website-prod
  namespace: danielmtz-website-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - danielmtzbarba.com
        - www.danielmtzbarba.com
      secretName: danielmtzbarba-com-tls
  rules:
    - host: danielmtzbarba.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danielmtz-website-prod
                port:
                  number: 80
    - host: www.danielmtzbarba.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danielmtz-website-prod
                port:
                  number: 80
